@startuml AddressService_Class_Diagram

' Class styles
skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam classBackgroundColor #EEEBDC
skinparam classBorderColor #A80036

' AddressService Class
class AddressService {
  - addressRepository: AddressRepository
  - userRepository: UserRepository

  + createAddress(userId: Long, addressDTO: AddressDTO): Address
  + updateAddress(addressId: Long, addressDTO: AddressDTO): Address
  + getAddressByUserId(userId: Long): Address
  + deleteAddress(addressId: Long): void
}

' Dependencies
interface AddressRepository
interface UserRepository

' Relationships
AddressService ..> AddressRepository : uses
AddressService ..> UserRepository : uses
AddressService ..> AddressDTO : uses
AddressService ..> Address : creates/returns

' Annotations
note right of AddressService
  @Service
  @Transactional
end note

@enduml